# deceptgold

./: .gitignore  404.html  ARCHITECTURE.md  CNAME  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  POETRY_PYENV_GUIDE.md  README.md  docker-compose.yml  index.html  objects.inv  sitemap.xml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  dependabot.yml  main.yml
About/: index.html
Architecture/: index.html
Blockchain/: index.html
Commands/: index.html
Contributing/: index.html
Development/: index.html
Installation/: index.html
Privacy/: index.html
Rewards/: index.html
Testing/: index.html
Web3_Testing/: index.html
Whitepaper/: index.html
deceptgold/: .gitignore  CHANGELOG  LICENSE  NOTICE  README.md  README.rst  pyproject.toml
deceptgold/.briefcase/deceptgold/dev/: venv_path
deceptgold/.github/workflows/: ci.yaml
deceptgold/contracts/: DeceptGoldToken.sol
deceptgold/deceptgold/src/deceptgold/: LICENSE
deceptgold/docker/: Dockerfile  README.md
deceptgold/docs/: API_REFERENCE.md  BLOCKCHAIN_INTEGRATION.md  GETTING_STARTED.md  TESTING.md  WEB3_HONEYPOT_TESTING.md  mkdocs.yml
deceptgold/docs/docs/: About.md  Blockchain.md  Commands.md  Testing.md  index.md
deceptgold/resources/contracts/: Deploy.md  ValidatorContract.sol
deceptgold/resources/docker/: Dockerfile  README.md
deceptgold/src/deceptgold/: CHANGELOG  LICENSE  NOTICE  __main__.py  _secrets_generated.py
deceptgold/src/deceptgold/comandos/: user.py
deceptgold/src/deceptgold/commands/: ai.py  dashboard.py  notify.py  others.py  reports.py  server.py  service.py  user.py
deceptgold/src/deceptgold/configuration/: config_manager.py  log.py  opecanary.py  secrets.py
deceptgold/src/deceptgold/entrypoints/: opencanary_runner.py
deceptgold/src/deceptgold/help/: signature.py
deceptgold/src/deceptgold/help/blockchain/: token.py
deceptgold/src/deceptgold/help/opencanary/: help_opencanary.py  proxy_logger.py
deceptgold/src/deceptgold/helper/: ai_model.py  descripton.py  fingerprint.py  helper.py  message_formatter.py  signature.py
deceptgold/src/deceptgold/helper/blockchain/: sender.py  token.py  token_web3_rewards.py
deceptgold/src/deceptgold/helper/notify/: discord.py  notify.py  slack.py  telegram.py  webhook.py
deceptgold/src/deceptgold/helper/notify/telemetry/: send.py
deceptgold/src/deceptgold/helper/opencanary/: help_opencanary.py  proxy_logger.py
deceptgold/src/deceptgold/helper/web3honeypot/: __init__.py  base.py  defi_protocol.py  explorer_api.py  ipfs_gateway.py  nft_marketplace.py  rpc_node.py  wallet_service.py
deceptgold/src/deceptgold/resources/: TokenContract.abi.json  ValidatorContract.abi.json
deceptgold/src/deceptgold/resources/dashboard/: dashboard.html
deceptgold/src/deceptgold/resources/models/: model_manifest.json
deceptgold/src/deceptgold/utils/: bootstrap_secrets.py
deceptgold/src_obf/deceptgold/: __init__.py  __main__.py  _secrets_generated.py
deceptgold/src_obf/deceptgold/commands/: ai.py  notify.py  reports.py  service.py  user.py
deceptgold/src_obf/deceptgold/configuration/: __init__.py  config_manager.py  log.py  opecanary.py  secrets.py
deceptgold/src_obf/deceptgold/helper/: __init__.py  ai_model.py  descripton.py  fingerprint.py  helper.py  message_formatter.py  signature.py
deceptgold/src_obf/deceptgold/helper/blockchain/: sender.py  token.py  token_web3_rewards.py
deceptgold/src_obf/deceptgold/helper/notify/: discord.py  notify.py  slack.py  telegram.py  webhook.py
deceptgold/src_obf/deceptgold/helper/notify/telemetry/: send.py
deceptgold/src_obf/deceptgold/helper/opencanary/: __init__.py  help_opencanary.py  proxy_logger.py
deceptgold/src_obf/deceptgold/helper/web3honeypot/: __init__.py  base.py  defi_protocol.py  explorer_api.py  ipfs_gateway.py  nft_marketplace.py  rpc_node.py  wallet_service.py
deceptgold/src_obf/deceptgold/pyarmor_runtime_000000/: __init__.py
deceptgold/src_obf/deceptgold/resources/models/: model_manifest.json
deceptgold/src_obf/deceptgold/utils/: __init__.py  bootstrap_secrets.py
deceptgold/tests/: test_config_manager.py  test_integration_services.py  test_secrets_bootstrap_sanity.py  test_signature.py  test_web2_honeypots.py  test_web3_honeypots.py
deceptgold/tests/test_contract/: ValidatorContract.abi.json
deceptgold/tools/: remove_tags.sh  remove_workflow.sh
deceptgold/utils/: attack_simulate.py  bootstrap_secrets.py  check_ratelimit.sh  check_virustotal.sh  compile.sh  create_changelog.py  create_documentation.py  mempool.py  web3_attack_simulator.py
deceptgold/utils/config/: cliff.toml
docs/: mkdocs.yml
docs/content/: About.md  Architecture.md  Blockchain.md  Commands.md  Contributing.md  Development.md  Installation.md  Privacy.md  Testing.md  Web3_Testing.md  Whitepaper.md  index.md
docs/content/assets/tmp/: Planilha.txt
docs/docs/: whitepaper.md
docs/site/: 404.html  index.html  sitemap.xml
docs/site/Commands/: index.html
docs/site/Testing/: index.html
docs/site/Web3_Testing/: index.html
docs/site/reward_calculation_specification/: index.html
documentacao_pasta/: DEVELOPMENT.md  README.md
documentation/: reward_calculation_specification.md  whitepaper.md
git-cliff-2.8.0/: git-cliff-completions  git-cliff-mangen
git-cliff-2.8.0/completions/: _git-cliff  _git-cliff.ps1  git-cliff.bash  git-cliff.elv  git-cliff.fish
git-cliff-2.8.0/man/: git-cliff.1
whitepaper/: index.html
