# This project was generated with 0.3.22 using template: https://github.com/beeware/briefcase-template@v0.3.22
[tool.briefcase]
project_name = "deceptgold"
bundle = "com.deceptgold"
version = "0.1.18"
url = "https://deceptgold.com/deceptgold"
license.file = "LICENSE"
author = "Jonathan Scheibel"
author_email = "jonathan@deceptgold.com"

[tool.poetry]
name = "deceptgold"
version = "0.1.18"
description = ""
authors = ["jonathan.scheibel <jonathan@deceptgold.com>"]
readme = "README.md"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"


[tool.briefcase.app.deceptgold]
formal_name = "deceptgold"
description = "Deceptgold is a next-gen deception platform that transforms the computational effort of cyber attacks into valuable digital assets — turning threats into opportunities."
long_description = """Deceptgold is a next-generation platform designed to manage deception strategies and reclaim value from cyber attacks. While most organizations focus only on detection, logging, and mitigation, Deceptgold takes a radically different approach: it transforms the computational effort of intrusion attempts into valuable digital assets."""
sources = [
    "src_obf/deceptgold",
]
test_sources = [
    "tests",
]
console_app = true

requires = [
    "cyclopts",
    "opencanary",
    "ecdsa"
]
test_requires = [
    "pytest",
]


[tool.briefcase.app.deceptgold.macOS]
universal_build = true
requires = [
    # Add your macOS-specific app requirements here
]

[tool.briefcase.app.deceptgold.linux]
requires = [
    # Add your Linux-specific app requirements here
]

[tool.briefcase.app.deceptgold.linux.system.debian]
system_requires = [
    # Add any system packages needed at build the app here
]

system_runtime_requires = [
    # Add any system packages needed at runtime here
]

[tool.briefcase.app.deceptgold.linux.system.rhel]
system_requires = [
    # Add any system packages needed at build the app here
]

system_runtime_requires = [
    # Add any system packages needed at runtime here
]

[tool.briefcase.app.deceptgold.linux.system.suse]
system_requires = [
    # Add any system packages needed at build the app here
]

system_runtime_requires = [
    # Add any system packages needed at runtime here
]

[tool.briefcase.app.deceptgold.linux.system.arch]
system_requires = [
    # Add any system packages needed at build the app here
]

system_runtime_requires = [
    # Add any system packages needed at runtime here
]

[tool.briefcase.app.deceptgold.linux.flatpak]
flatpak_runtime = "org.freedesktop.Platform"
flatpak_runtime_version = "24.08"
flatpak_sdk = "org.freedesktop.Sdk"

[tool.briefcase.app.deceptgold.windows]
requires = [
    # Add your Windows-specific app requirements here
]

# Mobile deployments
[tool.briefcase.app.deceptgold.iOS]
supported = false

[tool.briefcase.app.deceptgold.android]
supported = false

# Web deployments
[tool.briefcase.app.deceptgold.web]
supported = false

[tool.poetry.dependencies]
python = "^3.11"
cyclopts = "^3.11.1"
briefcase = "^0.3.22"
pyarmor = "^9.1.2"
opencanary = "^0.9.5"
ecdsa = "^0.19.1"
eth-account = "^0.13.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
