# This project was generated with 0.3.22 using template: https://github.com/beeware/briefcase-template@v0.3.22
[tool.briefcase]
project_name = "deceptgold"
bundle = "com.deceptgold"
version = "0.1.112"
url = "https://deceptgold.com/deceptgold"
license.file = "src/deceptgold/LICENSE"
author = "Jonathan Scheibel"
author_email = "jonathan@deceptgold.com"

[tool.poetry]
name = "deceptgold"
version = "0.1.112"
description = ""
authors = ["jonathan.scheibel <jonathan@deceptgold.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
memory-profiler = "^0.61.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "9.5.36"
mkdocstrings = {extras = ["python"], version = "^0.30.0"}
markdown-exec = "^1.10.3"
cyclopts = {extras = ["docstring"], version = "^3.14.2"}
pydocstyle = "^6.3.0"

[tool.briefcase.app.deceptgold]
formal_name = "deceptgold"
description = "Deceptgold is a next-gen deception platform that transforms the computational effort of cyber attacks into valuable digital assets — turning threats into opportunities."
long_description = """Deceptgold is a next-generation platform designed to manage deception strategies and reclaim value from cyber attacks. While most organizations focus only on detection, logging, and mitigation, Deceptgold takes a radically different approach: it transforms the computational effort of intrusion attempts into valuable digital assets."""
sources = [
    "src/deceptgold",
]
test_sources = [
    "tests",
]
console_app = true
requires = [
    "cyclopts",
    "opencanary",
    "ecdsa",
    "web3",
    "psutil",
    "qrcode_terminal",
    "httpx"
]
test_requires = [
    "pytest",
]
resources = ["deceptgold/resources"]

[tool.briefcase.app.deceptgold.macOS]
universal_build = true
requires = []

[tool.briefcase.app.deceptgold.linux]
requires = []

[tool.briefcase.app.deceptgold.linux.system.ubuntu]
system_requires = []
system_runtime_requires = ["libpython3.12"]

[tool.briefcase.app.deceptgold.linux.system.debian]
system_requires = []
system_runtime_requires = ["libpython3.11"]

[tool.briefcase.app.deceptgold.linux.system.fedora]
system_requires = []
system_runtime_requires = ["python3.12", "python3.12-libs"]

[tool.briefcase.app.deceptgold.linux.system.kali]
system_runtime_requires = ["python3", "libpython3-stdlib"]
docker_base_image = "kalilinux/kali-rolling"

[tool.briefcase.app.deceptgold.linux.flatpak]
flatpak_runtime = "org.freedesktop.Platform"
flatpak_runtime_version = "24.08"
flatpak_sdk = "org.freedesktop.Sdk"

[tool.briefcase.app.deceptgold.windows]
requires = []

[tool.briefcase.app.deceptgold.iOS]
supported = false

[tool.briefcase.app.deceptgold.android]
supported = false

[tool.briefcase.app.deceptgold.web]
supported = false

[tool.poetry.dependencies]
python = "^3.11"
cyclopts = "^3.11.1"
briefcase = "^0.3.22"
pyarmor = "^9.1.6"
opencanary = "^0.9.5"
ecdsa = "^0.19.1"
eth-account = "^0.13.7"
web3 = "^7.11.1"
qrcode-terminal = "^0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-changelog = "utils.create_changelog:main"
generate-doc = "utils.create_documentation:main"


